# egui-terminal

./: Cargo.toml  Cargo.toml.1  README.md  build.rs.1  git_deps.toml
src/: app.rs  into.rs  lib.rs  main.rs  old.rs  prelude.rs  render.rs  term.rs
src/config/: definitions.rs  mod.rs  term_config.rs
src/error/: conversion.rs
