[package]
name = "egui-terminal"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An embedded terminal emulator widget for egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
eframe = "0.22.0"
egui = "0.22.0"
