[package]
name = "egui-terminal"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An embedded terminal emulator widget for egui."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
eframe = "0.26"
egui = "0.26"
portable-pty = "0.8.1"
wezterm-term = { version = "0.1.0", git = "https://github.com/wez/wezterm", rev = "3666303c7b26c6c966b3f136dbb954686d334cc3" }
termwiz = { version = "0.22.0", git = "https://github.com/wez/wezterm", rev = "3666303c7b26c6c966b3f136dbb954686d334cc3" }

